force-app/main/default/objects/Productos__c/Productos__c.object-meta.xml
<CustomObject>
    <label>Material Solicitado</label>
    <nameField>
        <label>Nombre de Material Solicitado</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materiales Solicitados</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>