force-app/main/default/objects/Productos__c/fields/Comentarios_Muestras__c.field-meta.xml
<CustomField>
    <fullName>Comentarios_Muestras__c</fullName>
    <label>Comentarios Muestras</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>