force-app/main/default/objects/Productos__c/fields/Contenido_Total_del_Producto__c.field-meta.xml
<CustomField>
    <fullName>Contenido_Total_del_Producto__c</fullName>
    <label>Contenido Total del Producto</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>