force-app/main/default/objects/Productos__c/fields/Costo_Total__c.field-meta.xml
<CustomField>
    <fullName>Costo_Total__c</fullName>
    <formula>IF( TEXT(UM__c) = &quot;UN&quot;,((Costo__c -( Costo__c *0.30))* Cantidad_Solicitada__c ) , (( Precio_unitario__c -( Precio_unitario__c *0.30))* Cantidad_Solicitada__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costo Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>