force-app/main/default/objects/Productos__c/fields/Descuento__c.field-meta.xml
<CustomField>
    <fullName>Descuento__c</fullName>
    <defaultValue>&quot;30%&quot;</defaultValue>
    <label>Descuento</label>
    <length>10</length>
    <type>Text</type>
</CustomField>