force-app/main/default/objects/Productos__c/fields/Especificaciones__c.field-meta.xml
<CustomField>
    <fullName>Especificaciones__c</fullName>
    <label>Especificaciones</label>
    <length>50</length>
    <type>Text</type>
</CustomField>