force-app/main/default/objects/Productos__c/fields/Lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Materiales Solicitados</relationshipLabel>
    <relationshipName>Materiales_Solicitados</relationshipName>
    <type>Lookup</type>
</CustomField>