force-app/main/default/objects/Productos__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Materiales Solicitados</relationshipLabel>
    <relationshipName>Materiales_Solicitados</relationshipName>
    <type>Lookup</type>
</CustomField>