force-app/main/default/objects/Productos__c/fields/Solicitud_de_Pintura_Rotulaci_n__c.field-meta.xml
<CustomField>
    <fullName>Solicitud_de_Pintura_Rotulaci_n__c</fullName>
    <label>Solicitud de Pintura Rotulación</label>
    <referenceTo>Solicitud_de_Pintura_Rotulaci_n__c</referenceTo>
    <relationshipLabel>Materiales Solicitados</relationshipLabel>
    <relationshipName>Materiales_Solicitados</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>