force-app/main/default/objects/Productos__c/fields/Surtido__c.field-meta.xml
<CustomField>
    <fullName>Surtido__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Surtido</label>
    <type>Checkbox</type>
</CustomField>